Use Postgres + Testcontainers instead of H2